--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -261,7 +261,7 @@ For that reason, we map constraint types to \emph{DL} statements.
 
 With \emph{minimum qualified cardinality restrictions} (\emph{R-75/81})\footnote{Requirements/constraint types are uniquely identified by alphanumeric technical identifiers like \emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}, researchers from the library domain may restrict
 that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
-This constraint can be represented generically (\emph{generic constraint}) in \emph{DL} (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}), but also specifically (\emph{specific constraint}) by multiple constraint languages:
+This constraint can be represented generically (\emph{generic constraint}) in \emph{DL} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person)}}, but also specifically (\emph{specific constraint}) by multiple constraint languages:
 
 \begin{ex}
 # OWL 2:
@@ -291,16 +291,16 @@ Publication a rs:ResourceShape ; rs:property [
 \end{ex}
 
 As every \emph{publication} must have at least one \emph{author} which must be a \emph{person}, 
-and since the book \emph{The-Lord-Of-The-Rings} is a \emph{publication} \\(\ms{rdf:type(The-Lord-Of-The-Rings, Publication)}), 
+and since the book \emph{The-Lord-Of-The-Rings} is a \emph{publication} {\small\ms{(rdf:type(The-Lord-Of-The-Rings, Publication)),}} 
 it must have at least one \emph{author} relationship to a \emph{person}.
 Constraint violations are raised either (1) if
 \emph{The-Lord-Of-The-Rings} does not have any \emph{author} relationship, or (2) if 
 it has an \emph{author} which is not a \emph{person} \\
-(\ms{author(The-Lord-Of-The-Rings, Tolkien)}, \ms{rdf:type(Tolkien, Hobbit)}), 
+{\small\ms{(author(The-Lord-Of-The-Rings, Tolkien)}, \ms{rdf:type(Tolkien, Hobbit)),}} 
 or (3) if it has an \emph{author} for which no class is assigned
-(\ms{author(The-Lord-Of-The-Rings, Tolkien)}).
+{\small\ms{(author(The-Lord-Of-The-Rings, Tolkien)).}}
 In contrast, \emph{The-Lord-Of-The-Rings} is a valid \emph{publication}, if it is connected to a \emph{person} via the property \emph{author}
-(\ms{author(The-Lord-Of-The-Rings, Tolkien)}, \ms{rdf:type(Tolkien, Person)}).
+{\small\ms{(author(The-Lord-Of-The-Rings, Tolkien)}, \ms{rdf:type(Tolkien, Person)).}}
 
 As there is no standard way to formulate constraints, 
 semantically equivalent \emph{cardinality restrictions} may be represented by multiple constraint languages that have different syntax and semantics.
@@ -417,7 +417,7 @@ In order to develop a vocabulary to describe constraints of any constraint type 
 RDF validation requires that different names represent different objects (\emph{unique name assumption (UNA)}), whereas,
 \emph{OWL 2} is based on the {\em non-unique name assumption (nUNA)}.  
 A data property is \emph{functional} (\emph{R-65}) if for each individual \emph{x}, there can be at most one distinct literal \emph{y} such that \emph{x} is connected by the data property to \emph{y}. 
-When assuming \emph{UNA}, the functional property {\em title} (\ms{funct (title)}) causes a clash
+When assuming \emph{UNA}, the functional property {\em title} {\small\ms{(funct (title))}} causes a clash
 in case the book {\em Huckleberry-Finn} has more than one \emph{title}.
 %(\ms{title(Huckleberry-Finn,} \ms{The-Adventures-of-Huckleberry-Finn)}, \ms{title} \ms{(Huckleberry-Finn,} \ms{Die-Abenteuer-des-Huckleberry-Finn)}).
 Assuming \emph{nUNA}, however, reasoning concludes that the titles {\em The-Adventures-of-Huckleberry-Finn} and {\em Die-Abenteuer-des-Huckleberry-Finn} are the same. 
@@ -429,7 +429,7 @@ Reasoning in \emph{OWL 2} is based on the {\em open-world assumption (OWA)}, i.e
 %With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
 %\tb{the following example does not show the redundancy problem!}
 %\tb{2. benefit: reasoning solves redundancy problem}
-As each \emph{book} must have a \emph{title} (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and {\em Hamlet} is a \emph{book} (\ms{Book(Hamlet)}),
+As each \emph{book} must have a \emph{title} {\small\ms{(Book $\sqsubseteq \exists$ title.$\top$)}} and {\em Hamlet} is a \emph{book} {\small\ms{(Book(Hamlet)),}}
 {\em Hamlet} must have at least one \emph{title}.
 In an \emph{OWA} setting, this axiom does not cause a constraint violation (even if there is no explicitly defined \emph{title}), since there must be a \emph{title} for this \emph{book} which we may not know. 
 On the other hand, RDF validation scenarios require the \emph{closed-world assumption (CWA)}, i.e., a statement is inferred to be false if it cannot be proved to be true.
@@ -594,7 +594,7 @@ The cardinality restriction is a constraint on the property \emph{author} and is
 The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types which cannot be expressed in \emph{DL} (e.g. regular expressions and constraining facets).
 In some cases, a constraint is only complete when in addition to the \emph{constraining element} a \emph{constraining value} is stated.
 The cardinality restriction 
-\ms{$\geq$1 author.Person}, e.g., 
+{\small\ms{$\geq$1 author.Person}}, e.g., 
 constructs an anonymous class of all individuals having at least one \emph{author} relationship to \emph{persons}.
 The \emph{constraining element} of this \emph{property constraint} is the \emph{DL} at-least restriction \emph{$\geq$} and the \emph{constraining value} is \emph{1}.
 \emph{Simple constraints} may refer to a list of \emph{classes}.
@@ -606,8 +606,8 @@ The assignment of properties to these lists happens relative to the \emph{constr
 \emph{Object Property Paths} (\emph{R-55}; also called \emph{complex role inclusion axioms} in \emph{DL})
 express that, if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
-As \emph{Stephen-Hawking} is the \emph{author} of the book \emph{A-Brief-History-Of-Time} (\ms{authorOf(Stephen-Hawking, A-Brief-History-Of-Time)}) whose \emph{genre} is \emph{Popular-Science} ({\ms{genre(A-Brief-History-Of-Time, Popular-Science)}),
-the following \emph{object property path} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science} (\ms{authorOfGenre(Stephen-Hawking, Popular-Science)}):
+As \emph{Stephen-Hawking} is the \emph{author} of the book \emph{A-Brief-History-Of-Time} {\small\ms{(authorOf(Stephen-Hawking, A-Brief-History-Of-Time))}} whose \emph{genre} is \emph{Popular-Science} {\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
+the following \emph{object property path} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science} {\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science)):}}
 \begin{DL}
 authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre 
 \end{DL}
@@ -723,7 +723,7 @@ Publication {
     %klingonMother Miral ; humanFather JohnTorres .
 %\end{ex}
 
-As the \emph{The-Great-Gatsby} is a \emph{publication} (\ms{rdf:type(The-Great-Gatsby, Publication)}) having an \emph{ISBN} number (\ms{isbn(The-Great-Gatsby, '978-0241965672')}) and a \emph{title} (\ms{title(The-Great-Gatsby, 'The Great Gatsby')}) and not an additional \emph{ISSN} identifier, the \emph{The-Great-Gatsby} is a valid \emph{publication}.
+As the \emph{The-Great-Gatsby} is a \emph{publication} {\small\ms{(rdf:type(The-Great-Gatsby, Publication))}} having an \emph{ISBN} number {\small\ms{(isbn(The-Great-Gatsby, '978-0241965672'))}} and a \emph{title} {\small\ms{(title(The-Great-Gatsby, 'The Great Gatsby'))}} and not an additional \emph{ISSN} identifier, the \emph{The-Great-Gatsby} is a valid \emph{publication}.
 %\begin{DL}
 %rdf:type(BElannaTorres,Half-Klingon) \\
 %klingonMother(BElannaTorres,Miral) \\
@@ -1112,7 +1112,7 @@ CONSTRUCT {
 
 %First, we map these DL statements to two \emph{simple generic constraints} corresponding to the \emph{RDF-CV} (we define the class \ms{EnterpriseCaptains} by simply enumerating its instances):
 
-The \emph{DL} statement \ms{Publication $\equiv$ $\exists$ publisher.Publisher} is mapped to a \emph{(simple) generic constraint} conforming to the \emph{RDF-CV} (see Table \ref{tab:existential-quantification-as-simple-constraints}).
+The \emph{DL} statement {\small\ms{Publication $\equiv$ $\exists$ publisher.Publisher}} is mapped to a \emph{(simple) generic constraint} conforming to the \emph{RDF-CV} (see Table \ref{tab:existential-quantification-as-simple-constraints}).
 Then, one mapping (\emph{$m_1(sc_{OWL 2})$}, \emph{$m_2(sc_{ReSh})$}, \emph{$m_3(sc_{ShEx})$}, ...) is defined for each \emph{specific constraint} (\emph{$sc_{OWL 2}$}, \emph{$sc_{ReSh}$}, \emph{$sc_{ShEx}$}, ...) to the corresponding \emph{generic constraint} (\emph{gc}).
 
 %\begin{gcotable}
